--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - website/.env
     depends_on:
       - websocket
+      - redis
 
   websocket:
     build:
@@ -32,5 +33,24 @@ services:
     env_file:
       - SHARP/.env
 
+  redis:
+    image: redis:8-alpine
+    volumes:
+      - sharp_redisdata:/data
+    command: "redis-server --save 60 1"
+
+  postgres:
+    image: pgvector/pgvector:pg16
+    container_name: postgres-db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: REPLACE_ME
+    ports:
+      - "5432:5432"
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    restart: unless-stopped
+
 volumes:
-  sharp_pgdata:
+  pgdata:
+  sharp_redisdata:
