turnstile, better docs

--- a/website/package.json
+++ b/website/package.json
@@ -34,6 +34,7 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"svelte-sonner": "^0.3.28",
+		"svelte-turnstile": "^0.11.0",
 		"tailwind-merge": "^3.2.0",
 		"tailwind-variants": "^1.0.0",
 		"tailwindcss": "^3.4.9",
@@ -56,7 +57,8 @@
 		"postgres": "^3.4.5",
 		"redis": "^5.0.1",
 		"socket.io": "^4.8.1",
-		"socket.io-client": "^4.8.1"
+		"socket.io-client": "^4.8.1",
+		"svelte-turnstile": "^0.5.0"
 	},
 	"optionalDependencies": {
 		"@rollup/rollup-linux-x64-gnu": "4.6.1"
