--- a/SHARP/package.json
+++ b/SHARP/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "jose": "^6.0.11",
     "net": "^1.0.2",
     "postgres": "^3.4.5"
   }
