feat: improve gitignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
+node_modules
 .github
-websocket/node_modules
 .vscode
+.idea
 nullmark
+
+.DS_Store
+Thumbs.db
+desktop.ini
+
+.env
+.env.*
+!.env.example
+!.env.test
