--- a/website/websocket/package.json
+++ b/website/websocket/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "dotenv": "^16.5.0",
+    "ioredis": "^5.6.1",
     "jose": "^6.0.10",
     "postgres": "^3.4.5",
     "socket.io": "^4.8.1"
