--- a/website/package.json
+++ b/website/package.json
@@ -57,8 +57,7 @@
 		"postgres": "^3.4.5",
 		"redis": "^5.0.1",
 		"socket.io": "^4.8.1",
-		"socket.io-client": "^4.8.1",
-		"svelte-turnstile": "^0.5.0"
+		"socket.io-client": "^4.8.1"
 	},
 	"optionalDependencies": {
 		"@rollup/rollup-linux-x64-gnu": "4.6.1"
