fix(website): Rename PUBLIC_WEBSOCKET to PUBLIC_WEBSOCKET_URL

--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -25,8 +25,8 @@ ARG DATABASE_URL
 ENV DATABASE_URL=$DATABASE_URL
 ARG PUBLIC_DOMAIN
 ENV PUBLIC_DOMAIN=$PUBLIC_DOMAIN
-ARG PUBLIC_WEBSOCKET
-ENV PUBLIC_WEBSOCKET=$PUBLIC_WEBSOCKET
+ARG PUBLIC_WEBSOCKET_URL
+ENV PUBLIC_WEBSOCKET_URL=$PUBLIC_WEBSOCKET_URL
 ARG JWT_SECRET
 ENV JWT_SECRET=$JWT_SECRET
 ARG PRIVATE_B2_KEY_ID
