--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       args:
         - DATABASE_URL=${DATABASE_URL}
         - PUBLIC_DOMAIN=${PUBLIC_DOMAIN}
-        - PUBLIC_WEBSOCKET=${PUBLIC_WEBSOCKET}
+        - PUBLIC_WEBSOCKET_URL=${PUBLIC_WEBSOCKET_URL}
         - JWT_SECRET=${JWT_SECRET}
         - PRIVATE_B2_KEY_ID=${PRIVATE_B2_KEY_ID}
         - PRIVATE_B2_APP_KEY=${PRIVATE_B2_APP_KEY}
@@ -29,7 +29,7 @@ services:
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - PUBLIC_DOMAIN=${PUBLIC_DOMAIN}
-      - PUBLIC_WEBSOCKET=${PUBLIC_WEBSOCKET}
+      - PUBLIC_WEBSOCKET_URL=${PUBLIC_WEBSOCKET_URL}
       - JWT_SECRET=${JWT_SECRET}
       - PRIVATE_B2_KEY_ID=${PRIVATE_B2_KEY_ID}
       - PRIVATE_B2_APP_KEY=${PRIVATE_B2_APP_KEY}
